// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent Banner Text should correctly render banner text in the UK 1`] = `
.c0 {
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Just some text
</p>
`;

exports[`Consent Banner Text should correctly render banner text outside the UK 1`] = `
.c0 {
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Just some international text
</p>
`;

exports[`Consent Banner Text should correctly render banner text with a link in the UK 1`] = `
.c0 {
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Some text 
  <a
    href="https://www.bbc.co.uk"
  >
    with a link
  </a>
   followed by text.
</p>
`;

exports[`Consent Banner Text should correctly render banner text with a link outside the UK 1`] = `
.c0 {
  color: #BEBEBE;
}

.c0 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover {
  color: #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

<p
  className="c0"
>
  Some international text
  <a
    href="https://www.bbc.com"
  >
    with an international link
  </a>
   followed by international text.
</p>
`;
